--- a/HTML/nepal.html
+++ b/HTML/nepal.html
@@ -52,7 +52,7 @@
             <h2 class="section-title">Nepal Highlights</h2>
             <div class="highlight-cards">
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1580655653888-1a043663f52b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Mount Everest">
+                    <img src="#Images/632939-2560x1440-desktop-hd-nepal-wallpaper-photo.jpg&auto=format&fit=crop&w=1350&q=80" alt="Mount Everest">
                     <div class="card-content">
                         <h3>Mount Everest</h3>
                         <p>The world's highest peak at 8,848 meters, attracting adventurers and mountaineers from around the globe.</p>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://images.unsplash.com/photo-1566552881560-0be862a7c445?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Kathmandu">
+                    <img src="#Images/ktm.jpg" alt="Kathmandu">
                     <div class="card-content">
                         <h3>Kathmandu Valley</h3>
                         <p>A UNESCO World Heritage Site with ancient temples, palaces, and vibrant street life in the capital city.</p>
