--- a/HTML/nepal.html
+++ b/HTML/nepal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nepal - The Land of Himalayas</title>
-    <link rel="stylesheet" href="#CSS/nepal.css">
+    <link rel="stylesheet" href="/CSS/nepal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -52,7 +52,7 @@
             <h2 class="section-title">Nepal Highlights</h2>
             <div class="highlight-cards">
                 <div class="card">
-                    <img src="#Images/632939-2560x1440-desktop-hd-nepal-wallpaper-photo.jpg&auto=format&fit=crop&w=1350&q=80" alt="Mount Everest">
+                    <img src="/Images/632939-2560x1440-desktop-hd-nepal-wallpaper-photo.jpg&auto=format&fit=crop&w=1350&q=80" alt="Mount Everest">
                     <div class="card-content">
                         <h3>Mount Everest</h3>
                         <p>The world's highest peak at 8,848 meters, attracting adventurers and mountaineers from around the globe.</p>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="#Images/ktm.jpg" alt="Kathmandu">
+                    <img src="/Images/ktm.jpg" alt="Kathmandu">
                     <div class="card-content">
                         <h3>Kathmandu Valley</h3>
                         <p>A UNESCO World Heritage Site with ancient temples, palaces, and vibrant street life in the capital city.</p>
