--- a/Web/nepal.html
+++ b/Web/nepal.html
@@ -40,7 +40,7 @@
                     <p>Nepal is home to eight of the world's ten tallest mountains, including Mount Everest, the highest point on Earth. Kathmandu is the nation's capital and largest city.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1566609103143-1e536d9e9e9d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Nepal landscape">
+                    <img src="./Images/360_F_311461036_KEx4FZdwZk7scnsgz7kZkxwQcbtq7Q0I.jpg&auto=format&fit=crop&w=1350&q=80" alt="Nepal landscape">
                 </div>
             </div>
         </div>
