--- a/Web/nepal.html
+++ b/Web/nepal.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src=".Images/ktm.jpg" alt="Kathmandu">
+                    <img src="./Images/ktm.jpg" alt="Kathmandu">
                     <div class="card-content">
                         <h3>Kathmandu Valley</h3>
                         <p>A UNESCO World Heritage Site with ancient temples, palaces, and vibrant street life in the capital city.</p>
