--- a/Web/nepal.html
+++ b/Web/nepal.html
@@ -40,7 +40,7 @@
                     <p>Nepal is home to eight of the world's ten tallest mountains, including Mount Everest, the highest point on Earth. Kathmandu is the nation's capital and largest city.</p>
                 </div>
                 <div class="about-image">
-                    <img src="./Images/360_F_311461036_KEx4FZdwZk7scnsgz7kZkxwQcbtq7Q0I.jpg&auto=format&fit=crop&w=1350&q=80" alt="Nepal landscape">
+                    <img src="./Images/360_F_311461036_KEx4FZdwZk7scnsgz7kZkxwQcbtq7Q0I.jpg" alt="Nepal landscape">
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <h2 class="section-title">Nepal Highlights</h2>
             <div class="highlight-cards">
                 <div class="card">
-                    <img src="./Images/632939-2560x1440-desktop-hd-nepal-wallpaper-photo.jpg&auto=format&fit=crop&w=1350&q=80" alt="Mount Everest">
+                    <img src="./Images/632939-2560x1440-desktop-hd-nepal-wallpaper-photo.jpg" alt="Mount Everest">
                     <div class="card-content">
                         <h3>Mount Everest</h3>
                         <p>The world's highest peak at 8,848 meters, attracting adventurers and mountaineers from around the globe.</p>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./Images/Chitwan National Park elephant safari.jpg&auto=format&fit=crop&w=1350&q=80" alt="Chitwan National Park">
+                    <img src="./Images/Chitwan National Park elephant safari.jpg" alt="Chitwan National Park">
                     <div class="card-content">
                         <h3>Chitwan National Park</h3>
                         <p>Home to Bengal tigers, one-horned rhinos, and diverse wildlife in the subtropical lowlands.</p>
