--- a/Web/nepal.html
+++ b/Web/nepal.html
@@ -109,37 +109,37 @@
             <h2 class="section-title">Nepal in Pictures</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1566552881560-0be862a7c445?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Nepal 1">
+                    <img src="./Images/awe-inspiring-and-breathtaking-beauty-of-the-himalayas-with-sunlit-clouds-and-misty-peaks-orange-color-nature-ai-generative-photo.jpg" alt="Nepal 1">
                     <div class="overlay">
                         <h3>Himalayan Peaks</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1580655653888-1a043663f52b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Nepal 2">
+                    <img src="./Images/pashupatinath-temple-nepal-700-14.jpg" alt="Nepal 2">
                     <div class="overlay">
                         <h3>Ancient Temples</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1566609103143-1e536d9e9e9d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Nepal 3">
+                    <img src="./Images/istockphoto-2166459683-612x612.jpg" alt="Nepal 3">
                     <div class="overlay">
                         <h3>Colorful Streets</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1523482580672-f109ba8cb9be?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Nepal 4">
+                    <img src="./Images/paubha-2.jpg" alt="Nepal 4">
                     <div class="overlay">
                         <h3>Traditional Art</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1566552881560-0be862a7c445?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Nepal 5">
+                    <img src="./Images/intero for Top 10 villages in nepal.jpg" alt="Nepal 5">
                     <div class="overlay">
                         <h3>Mountain Villages</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1580655653888-1a043663f52b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Nepal 6">
+                    <img src="./Images/thumb-1920-802384.jpg" alt="Nepal 6">
                     <div class="overlay">
                         <h3>Wildlife</h3>
                     </div>
