--- a/Web/nepal.html
+++ b/Web/nepal.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./Web/nepal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./Images/69261423.png" type="image/png">
 </head>
 <body>
     <!-- Navigation -->
