--- a/Web/nepal.html
+++ b/Web/nepal.html
@@ -57,7 +57,7 @@
                     <div class="card-content">
                         <h3>Mount Everest</h3>
                         <p>The world's highest peak at 8,848 meters, attracting adventurers and mountaineers from around the globe.</p>
-                        <a href="#" class="read-more">Read More →</a>
+                        <a href="./Web/mt.html" class="read-more">Read More →</a>
                     </div>
                 </div>
                 <div class="card">
