--- a/Web/mt.html
+++ b/Web/mt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mount Everest - The Roof of the World</title>
-    <link rel="stylesheet" href="./Web/mt.css">
+    <link rel="stylesheet" href="./mt.css">
 </head>
 <body>
     <header>
