--- a/Web/mt.html
+++ b/Web/mt.html
@@ -6,7 +6,7 @@
     <title>Mount Everest - The Roof of the World</title>
     <link rel="stylesheet" href="./mt.css">
 </head>
-<body>
+<body background="./Images/mountains-mount-everest-sunlight-digital-art-wallpaper-preview.jpg">
     <header>
         <h1>Mount Everest</h1>
         <p>The Highest Peak on Earth</p>
