--- a/Web/mt.html
+++ b/Web/mt.html
@@ -135,7 +135,7 @@
         </section>
     </main>
 
-    <footer style="display: block; font-size: xx-large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; background-image: -webkit-image-set('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg/800px-Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg');">
+    <footer style="display: block; font-size: xx-large; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; background-image: -webkit-image-set('https://parallel-gertruda-wizardzz-fb37ac55.koyeb.app/Images/360_F_1181891290_yDNtTrCSGtpLtTWaweanxijZ28Ul4tzq.jpg');">
         <p><a href="./about.html">Make By Mine Master!! </a></p>
     </footer>
 </body>
