--- a/Web/mt.html
+++ b/Web/mt.html
@@ -130,7 +130,7 @@
             <div class="gallery">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg/800px-Everest_North_Face_toward_Base_Camp_Tibet_Luca_Galuzzi_2006.jpg" alt="North Face of Everest">
                 <img src="./Images/mountains-mount-everest-sunlight-digital-art-wallpaper-preview.jpg" alt="Everest skyline">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Everest_from_Rombok_Beach%2C_Kuta%2C_Indonesia.jpg/800px-Everest_from_Rombok_Beach%2C_Kuta%2C_Indonesia.jpg" alt="Everest from distance">
+                <img src="./Images/632939-2560x1440-desktop-hd-nepal-wallpaper-photo.jpg" alt="Everest from distance">
             </div>
         </section>
     </main>
