--- a/Web/nepal.html
+++ b/Web/nepal.html
@@ -160,7 +160,7 @@
                     <div class="card-content">
                         <h3>Kathmandu Valley</h3>
                         <p>A UNESCO World Heritage Site with ancient temples, palaces, and vibrant street life in the capital city.</p>
-                        <a href="#" class="read-more">Read More →</a>
+                        <!a href="#" class="read-more"Read More →>
                     </div>
                 </div>
                 <div class="card">
@@ -168,7 +168,7 @@
                     <div class="card-content">
                         <h3>Chitwan National Park</h3>
                         <p>Home to Bengal tigers, one-horned rhinos, and diverse wildlife in the subtropical lowlands.</p>
-                        <a href="#" class="read-more">Read More →</a>
+                        <!a href="#" class="read-more"Read More →>
                     </div>
                 </div>
             </div>
