--- a/Web/about.html
+++ b/Web/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Master! </title>
+        <link rel="icon" href="./Images/69261423.png" type="image/png">
         <style>
             .code-container {
                 display: flex;
