--- a/Web/mt.html
+++ b/Web/mt.html
@@ -19,7 +19,7 @@
             <li><a href="#facts">Key Facts</a></li>
             <li><a href="#history">Climbing History</a></li>
             <li><a href="#gallery">Gallery</a></li>
-            <li><a href="./Web/About">About</a></li>
+            <li><a href="./about.html">About</a></li>
         </ul>
     </nav>
 
